[tool.poetry]
name = "pg-sample-schema"
version = "0.1.0"
description = "PostgreSQL schema written in SQLAlchemy table definitions."
authors = ["dongju93 <spdlqj011@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dongju93/pg-sqlalchemy"
package-mode = true


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
